# python-project-template

./: .gitignore  README.md  pyproject.toml
docker/: Dockerfile  docker-compose.yml  wandb.env
